--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "graphql-yoga": "^1.17.4"
+    "graphql-yoga": "^1.18.3",
+    "apollo-datasource-rest": "^0.13.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
